--- a/MarketingCompanyRepository/pom.xml
+++ b/MarketingCompanyRepository/pom.xml
@@ -7,6 +7,15 @@
         <groupId>marketing.company</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <spring-boot-autoconfigure.version>2.5.6</spring-boot-autoconfigure.version>
+        <spring-data-jpa.version>2.5.4</spring-data-jpa.version>
+        <AngularJS.version>1.3.15</AngularJS.version>
+        <angular-ui-router-bower.version>1.0.28</angular-ui-router-bower.version>
+    </properties>
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>MarketingCompanyRepository</artifactId>
     <packaging>jar</packaging>
@@ -18,6 +27,7 @@
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -27,6 +37,10 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>${spring-data-jpa.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
@@ -42,13 +56,5 @@
         </dependency>
 
     </dependencies>
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <spring-boot-autoconfigure.version>2.5.6</spring-boot-autoconfigure.version>
-        <spring-data-jpa.version>2.5.4</spring-data-jpa.version>
-        <AngularJS.version>1.3.15</AngularJS.version>
-        <angular-ui-router-bower.version>1.0.28</angular-ui-router-bower.version>
-    </properties>
 
 </project>
