--- a/MarketingCompanyTranslator/pom.xml
+++ b/MarketingCompanyTranslator/pom.xml
@@ -8,14 +8,14 @@
         <groupId>marketing.company</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>MarketingCompanyTranslator</artifactId>
-    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <AngularJS.version>1.3.15</AngularJS.version>
         <angular-ui-router-bower.version>1.0.28</angular-ui-router-bower.version>
     </properties>
+    <artifactId>MarketingCompanyTranslator</artifactId>
+    <packaging>jar</packaging>
     <dependencies>
        <dependency>
             <groupId>marketing.company</groupId>
@@ -30,6 +30,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.webjars.bower</groupId>
             <artifactId>AngularJS</artifactId>
             <version>${AngularJS.version}</version>
@@ -41,6 +45,7 @@
             <version>${angular-ui-router-bower.version}</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
