--- a/pom.xml
+++ b/pom.xml
@@ -4,62 +4,40 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <description>Demo_project_for_Spring_Boot</description>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <annotations.version>22.0.0</annotations.version>
+        <AngularJS.version>1.3.15</AngularJS.version>
+        <angular.version>12</angular.version>
+        <angular-ui-router-bower.version>1.0.28</angular-ui-router-bower.version>
+        <junit-jupiter.version>5.8.1</junit-jupiter.version>
+        <swagger-annotations.version>1.6.3</swagger-annotations.version>
+        <spring-boot-starter-web.version>2.1.6.RELEASE</spring-boot-starter-web.version>
+        <springfox-bean-validators.version>2.9.2</springfox-bean-validators.version>
+        <slf4j-converter.version>1.5.0-M0</slf4j-converter.version>
+        <slf4j-converter.version>1.4.3</slf4j-converter.version>
+        <haltOnFailure>false</haltOnFailure>
+    </properties>
     <artifactId>MarketingCompany</artifactId>
     <groupId>marketing.company</groupId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <haltOnFailure>false</haltOnFailure>
-        <slf4j-converter.version>1.5.0-M0</slf4j-converter.version>
-        <angular-ui-router-bower.version>1.0.28</angular-ui-router-bower.version>
-        <slf4j-converter.version>1.4.3</slf4j-converter.version>
-        <junit-jupiter.version>5.8.1</junit-jupiter.version>
-        <AngularJS.version>1.3.15</AngularJS.version>
-        <swagger-annotations.version>1.6.3</swagger-annotations.version>
-        <annotations.version>22.0.0</annotations.version>
-        <angular.version>12</angular.version>
-        <spring-boot-starter-web.version>2.1.6.RELEASE</spring-boot-starter-web.version>
-        <AngularJS.version>1.3.15</AngularJS.version>
-
-
-
-    </properties>
     <modules>
         <module>MarketingCompanyDomain</module>
         <module>MarketingCompanyLogic</module>
-        <module>MarketingCompanyRepository</module>
         <module>MarketingCompanyTranslator</module>
+        <module>MarketingCompanyRepository</module>
         <module>MarketingCompanyWebApplication</module>
     </modules>
-
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${springfox-swagger.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.annotation</groupId>
-                        <artifactId>jackson.annotation</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
             <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
@@ -77,46 +55,17 @@
                 <version>${annotations.version}</version>
             </dependency>
 
-           <dependency>
-               <groupId>org.apache.zeppelin</groupId>
-               <artifactId>angular</artifactId>
-               <version>${angular.version}</version>
-           </dependency>
-            <!--
-              <dependency>
-
-                   <groupId>AngularElem</groupId>
-                   <artifactId></artifactId>
-                   <version></version>
-               </dependency>
-              import org.apache.zeppelin.display.angular.notebookscope;
-               import AngularElem;
-
-               // In paragraph scope
-               import org.apache.zeppelin.display.angular.paragraphscope;
-               import AngularElem;-->
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-bean-validators</artifactId>
-                <version>${springfox-swagger.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.annotation</groupId>
-                        <artifactId>jackson.annotation</artifactId>
-                    </exclusion>
-                    <!--
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
-                    </exclusion>
-
-                -->
-                </exclusions>
+                <groupId>org.apache.zeppelin</groupId>
+                <artifactId>angular</artifactId>
+                <version>${angular.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot-starter-web.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -146,16 +95,34 @@
                 <version>${slf4j-converter.version}</version>
                 <scope>compile</scope>
             </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox-swagger.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-bean-validators</artifactId>
+                <version>${springfox-bean-validators.version}</version>
+                <scope>compile</scope>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
     <dependencies>
-
-
-
-
-
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-converter</artifactId>
+            <version>${slf4j-converter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -178,41 +145,88 @@
             <version>${AngularJS.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
-
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.3</version>
-                    <configuration>
-                        <haltOnFailure>${haltOnFailure}</haltOnFailure>
-                        <rules>
-                            <rule>
-                                <element>CLASS</element>
-                                <execudes>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+                <executions>
+                    <execution>
+                        <id>default-site</id>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <configuration>
 
-                                </execudes>
-                            </rule>
-                        </rules>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>default-report</id>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
+        </plugins>
     </build>
 </project>
+        <!--
+               <build>
+           <plugins>
+               <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-dependency-plugin</artifactId>
+                   <version>3.2.0</version>
+                   <executions>
+
+                       <execution>
+                           <id>build-classpath</id>
+                           <phase>generate-sources</phase>
+                           <goals>
+                               <goal>build-classpath</goal>
+                           </goals>
+                           <configuration>
+
+                           </configuration>
+                       </execution>
+                   </executions>
+               </plugin>
+           </plugins>
+
+       </build>
+
+       <! configure the plugin here
+
+                              <haltOnFailure>${haltOnFailure}</haltOnFailure>
+
+       <build>
+           <pluginManagement>
+               <plugins>
+                   <plugin>
+                       <groupId>org.jacoco</groupId>
+                       <artifactId>jacoco-maven-plugin</artifactId>
+                       <version>0.8.3</version>
+                       <configuration>
+                       </configuration>
+                       <executions>
+                           <execution>
+                               <id>default-report</id>
+                               <phase>prepare-package</phase>
+                               <goals>
+                                   <goal>report</goal>
+                               </goals>
+                           </execution>
+                       </executions>
+                   </plugin>
+
+               </plugins>
+
+           </pluginManagement>
+
+    -->
+
         <!-- <springfox-angular-version>12.2.12</springfox-angular-version>-->
         <!-- <name>MarketingCompany</name>-->
